[package]
name = "TarkFleaV3"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-capture = "1.4.2"
tokio = { version = "1.43.0", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
png = "0.17.10"
template-matching = { version = "0.2.0", features = ["image"] }
image = "0.25.5"
rusty-tesseract = "1.1.9"

[[bin]]
name = "captcha"
path = "src/captcha.rs"
